[gd_scene load_steps=6 format=3 uid="uid://8dvu7wfgxggf"]

[ext_resource type="Script" uid="uid://ckqwbad6ipk2p" path="res://Scripts/UI/esc_ui.gd" id="1_ugshl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_egadf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugshl"]
bg_color = Color(1, 0.701961, 0.423529, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_dsxdl"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_myvoe"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Panel" type="GridContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/v_separation = 25
script = ExtResource("1_ugshl")

[node name="Play" type="Button" parent="."]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_egadf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ugshl")

[node name="Label" type="Label" parent="Play"]
layout_mode = 0
offset_right = 375.0
offset_bottom = 156.0
scale = Vector2(0.8, 0.8)
text = "Play"
label_settings = SubResource("LabelSettings_dsxdl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_egadf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ugshl")

[node name="Label" type="Label" parent="Options"]
offset_right = 462.0
offset_bottom = 154.0
scale = Vector2(0.65, 0.65)
text = "Options"
label_settings = SubResource("LabelSettings_myvoe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="."]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_egadf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ugshl")

[node name="Label" type="Label" parent="Menu"]
offset_right = 545.0
offset_bottom = 164.0
scale = Vector2(0.55, 0.55)
text = "Menu"
label_settings = SubResource("LabelSettings_dsxdl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="Button" parent="."]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_egadf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ugshl")

[node name="Label" type="Label" parent="Quit"]
offset_right = 600.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
text = "Quit"
label_settings = SubResource("LabelSettings_dsxdl")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
